<resources>
    <string name="app_name">Bricks2Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_without_registration">ПРОДОЛЖИТЬ БЕЗ РЕГИСТРАЦИИ</string>
    <string name="registration">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="login">ВОЙТИ</string>
    <string name="Enter">Войти</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="Save">СОХРАНИТЬ</string>
    <string name="choose_level">Выберите уровень</string>
    <string name="choose_assembly">Выберите модель</string>
    <string name="details">Необходимые детали</string>
    <string name="favorites">Избранное</string>
    <string name="beginner">Начальный</string>
    <string name="professional">Профессионал</string>
    <string name="specialist">Специалист</string>
    <string name="empty_string">""</string>
    <string name="go_to_assembly">ПРИСТУПИТЬ К СБОРКЕ</string>
    <integer name="com_vk_sdk_AppId">7583418</integer>
</resources>